--- a/ucad-examples-23/package.json
+++ b/ucad-examples-23/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "eslint": "^8.52.0",
     "eslint-config-google": "^0.14.0",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "pug": "^1.0.0"
   }
 }
